add delete skill route
